# Arxia

./: .editorconfig  .gitignore  CODEOWNERS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  esp32.yml  security-audit.yml
contracts/token-lock/: Cargo.toml
contracts/token-lock/src/: lib.rs
crates/arxia-bench/: Cargo.toml
crates/arxia-bench/benches/: crypto_bench.rs
crates/arxia-bench/src/: lib.rs
crates/arxia-core/src/: constants.rs  types.rs
crates/arxia-crdt/src/: pn_counter.rs
crates/arxia-crypto/: Cargo.toml
crates/arxia-crypto/src/: blake3_hash.rs  chacha20.rs  ed25519.rs  lib.rs  slip39.rs
crates/arxia-gossip/src/: node.rs
crates/arxia-lattice/: Cargo.toml
crates/arxia-lattice/src/: block.rs  chain.rs  lib.rs
crates/arxia-transport/: Cargo.toml
crates/arxia-transport/src/: lib.rs  traits.rs
crates/arxia-transport/src/sim/: mod.rs  simulated.rs
crates/arxia-wasm/: Cargo.toml
crates/arxia-wasm/src/: lib.rs
examples/mesh_relay/: Cargo.toml
examples/mesh_relay/src/: main.rs
examples/partition_reconciliation/: Cargo.toml
examples/partition_reconciliation/src/: main.rs
scripts/: build.sh  clean-metadata.sh  lint.sh  test.sh
targets/esp32/: Cargo.toml
targets/esp32/src/: lib.rs
tools/arxia-cli/: Cargo.toml
tools/arxia-cli/src/: main.rs
