[package]
name = "arxia-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for the Arxia protocol"

[dependencies]
arxia-core = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
