[package]
name = "arxia-lattice"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Block Lattice implementation for the Arxia protocol"

[dependencies]
arxia-core = { workspace = true }
arxia-crypto = { workspace = true }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
